--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,19 @@ jwt:
   algorithm:
     key: secret
   token:
-    lifetime: 15
+    token-lifetime: 15
+    email-token-lifetime: 5
+mail:
+  from: "test"
+app:
+  frontend:
+    url: "[::1]:8080/api/v1/auth/verify"
+
+# SMTP configuration
+gmail:
+  host: localhost
+  port: 25
+#spring.mail.username=
+#spring.mail.password=
+#spring.properties.mail.smtp.auth=true
+#spring.properties.mail.smtp.starttls.enable=true
